--- a/WaveGenerator/WaveGenerator.ioc
+++ b/WaveGenerator/WaveGenerator.ioc
@@ -1,66 +1,54 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=USART1_RX
-Dma.RequestsNb=1
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.0.Instance=DMA1_Channel5
-Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_CIRCULAR
-Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=DMA
-Mcu.IP1=IWDG
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP0=IWDG
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IP5=USART1
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
 Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
-Mcu.Pin2=PA1
-Mcu.Pin20=PA11
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PA15
+Mcu.Pin19=PB3
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin20=PB4
 Mcu.Pin21=PB5
 Mcu.Pin22=PB6
 Mcu.Pin23=PB7
-Mcu.Pin24=VP_IWDG_VS_IWDG
-Mcu.Pin25=VP_SYS_VS_ND
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=29
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_IWDG_VS_IWDG
+Mcu.Pin27=VP_SYS_VS_ND
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
 MxCube.Version=4.24.0
 MxDb.Version=DB.4.0.240
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:true\:true\:1\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -69,145 +57,141 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TIM1_BRK_IRQn=true\:1\:0\:true\:true\:true\:2\:true
-NVIC.TIM2_IRQn=true\:1\:0\:true\:true\:true\:3\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:true\:true\:4\:true
+NVIC.TIM1_BRK_IRQn=true\:1\:0\:true\:true\:true\:1\:true
+NVIC.USART1_IRQn=true\:1\:0\:true\:true\:true\:2\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:true\:true\:3\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+PA0-WKUP.GPIOParameters=GPIO_Speed,GPIO_Label
+PA0-WKUP.GPIO_Label=D0
+PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA1.GPIO_Label=D0
+PA1.GPIO_Label=D1
 PA1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA1.Locked=true
-PA1.PinState=GPIO_PIN_SET
+PA1.PinState=GPIO_PIN_RESET
 PA1.Signal=GPIO_Output
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA11.GPIO_Label=LDAC
+PA11.GPIO_Label=D7
 PA11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA11.Locked=true
-PA11.PinState=GPIO_PIN_SET
+PA11.PinState=GPIO_PIN_RESET
 PA11.Signal=GPIO_Output
-PA2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA2.GPIO_Label=D1
-PA2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA12.GPIOParameters=GPIO_Speed,GPIO_Label
+PA12.GPIO_Label=D8
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA15.GPIOParameters=GPIO_Speed,GPIO_Label
+PA15.GPIO_Label=D9
+PA15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.Locked=true
-PA2.PinState=GPIO_PIN_SET
-PA2.Signal=GPIO_Output
-PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA3.GPIO_Label=D3
-PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
 PA3.Locked=true
-PA3.PinState=GPIO_PIN_SET
-PA3.Signal=GPIO_Output
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA4.GPIO_Label=D4
+PA4.GPIO_Label=D2
 PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA4.Locked=true
-PA4.PinState=GPIO_PIN_SET
+PA4.PinState=GPIO_PIN_RESET
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA5.GPIO_Label=D5
+PA5.GPIO_Label=D3
 PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA5.Locked=true
-PA5.PinState=GPIO_PIN_SET
+PA5.PinState=GPIO_PIN_RESET
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA6.GPIO_Label=D6
+PA6.GPIO_Label=D4
 PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA6.Locked=true
-PA6.PinState=GPIO_PIN_SET
+PA6.PinState=GPIO_PIN_RESET
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA7.GPIO_Label=D7
+PA7.GPIO_Label=D5
 PA7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Locked=true
-PA7.PinState=GPIO_PIN_SET
+PA7.PinState=GPIO_PIN_RESET
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Speed,GPIO_Label
+PA8.GPIO_Label=D6
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB0.GPIO_Label=D8
+PB0.GPIO_Label=D10
 PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB0.Locked=true
-PB0.PinState=GPIO_PIN_SET
+PB0.PinState=GPIO_PIN_RESET
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB1.GPIO_Label=D9
+PB1.GPIO_Label=D11
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB1.Locked=true
-PB1.PinState=GPIO_PIN_SET
+PB1.PinState=GPIO_PIN_RESET
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB10.GPIO_Label=D11
+PB10.GPIO_Label=RS_N_1
 PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB10.Locked=true
 PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
-PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB11.GPIO_Label=D12
-PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB11.Locked=true
-PB11.PinState=GPIO_PIN_SET
-PB11.Signal=GPIO_Output
-PB12.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB12.GPIO_Label=D13
-PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB12.Locked=true
-PB12.PinState=GPIO_PIN_SET
-PB12.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB13.GPIO_Label=D14
-PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB13.Locked=true
-PB13.PinState=GPIO_PIN_SET
-PB13.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB14.GPIO_Label=D15
-PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB14.Locked=true
-PB14.PinState=GPIO_PIN_SET
-PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB15.GPIO_Label=D16
-PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB15.Locked=true
-PB15.PinState=GPIO_PIN_SET
-PB15.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB2.GPIO_Label=D10
-PB2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB2.Locked=true
-PB2.PinState=GPIO_PIN_SET
-PB2.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=WR
+PB3.GPIOParameters=GPIO_Speed,GPIO_Label
+PB3.GPIO_Label=D12
+PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Speed,GPIO_Label
+PB4.GPIO_Label=D13
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Speed,GPIO_Label
+PB5.GPIO_Label=D14
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=RS
+PB6.GPIOParameters=GPIO_Speed,GPIO_Label
+PB6.GPIO_Label=D15
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=MSB
+PB7.GPIOParameters=GPIO_Speed,GPIO_Label
+PB7.GPIO_Label=LDAC_1
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PB8.GPIO_Label=WR_N_1
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.Locked=true
+PB8.PinState=GPIO_PIN_SET
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Speed,GPIO_Label
+PB9.GPIO_Label=MSB_1
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103C(8-B)Tx
@@ -245,7 +229,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -271,12 +255,10 @@ TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM1.Period=500
 TIM1.Prescaler=35
-TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM2.Period=1000
-TIM2.Prescaler=35
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_ND.Mode=No_Debug
@@ -285,6 +267,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=WaveGenerator
